<resources>
    <string name="app_name">Lite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="string_btn_login">Login</string>
    <string name="string_link_signup">Sign Up</string>
    <string name="string_image_descrip_profile_picture">Profile picture</string>
    <string name="string_txt_descrip_phone">Phone number</string>
    <string name="string_txt_descrip_pwd">Password</string>
    <string name="string_txt_phone">Phone</string>
    <string name="string_txt_pwd">Password</string>
    <string name="string_link_smslogin">Login with SMS verification code</string>
    <string name="string_checkbox_rememberPwd">Remember me</string>
    <string name="string_link_forgetPwd">Forget ?</string>
    <string name="string_menu_home_page">Projects</string>
    <string name="string_menu_message_box">Messages</string>
    <string name="string_menu_cardcase">Contacts</string>
    <string name="string_menu_my_profile">Me</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="string_link_pwdlogin">Login with password</string>
    <string name="string_txt_sms_code">SMS code</string>
    <string name="string_btn_get_code">Get code</string>
    <string name="string_btn_next">Next</string>
    <string name="string_txt_new_pwd">Password</string>
    <string name="string_txt_confirm_password">Confirm</string>
    <string name="string_btn_modify_pwd">Modify</string>
    <string name="string_txt_set_pwd">Password</string>
    <string name="string_btn_signup">Sign up</string>
    <string name="string_txt_project_tree">Project tree</string>
    <string name="string_btn_descrip_project_tree">Project tree</string>
    <string name="string_descrip_btn_project_tree">Project tree</string>
    <string name="string_txt_isLeader">(Leader)</string>
    <string name="string_descrip_dot_msg_count">There are unread messages</string>
    <string name="string_btn_menu_search">Search</string>
    <string name="string_btn_menu_new_project">New project</string>
    <string name="string_btn_scan_qr_code">Scan QR code</string>
    <string name="string_descrip_my_profile_bg">My profile background image</string>
    <string name="string_my_profile_tab_time_table">Schedule</string>
    <string name="string_my_profile_tab_memo">Memo</string>
    <string name="string_my_profile_bar_title">My profile</string>
    <string name="string_btn_send">send</string>
    <string name="string_txt_hint_comment_edit">Enter your comment and send it</string>
    <string name="string_txt_node_info">Node information</string>
    <string name="string_txt_node_mission">Node mission</string>
    <string name="string_txt_node_comment">Comments</string>
    <string name="string_txt_node_name">Node name</string>
    <string name="string_txt_node_member">Node members</string>
    <string name="string_txt_node_brief">Node brief</string>
    <string name="string_node_time">Node time</string>
    <string name="string_txt_project_name">Project name</string>
    <string name="string_txt_project_abstract">Abstract</string>
    <string name="string_txt_project_leader">Leader</string>
    <string name="string_txt_project_members">Members</string>
    <string name="string_txt_project_time">Time line</string>
    <string name="string_btn_create">Create</string>
    <string name="string_btn_cancel">Cancel</string>
    <string name="string_txt_set_user_name">User name</string>
    <string name="string_btn_menu_create_project">Create</string>
    <string name="string_btn_menu_join_project">Join</string>
    <string name="string_txt_btn_set_start_date">Start date</string>
    <string name="string_txt_btn_set_end_date">Deadline</string>
<<<<<<< HEAD
    <string name="string_query_result">Query result:</string>
    <string name="string_txt_project_number">Project number</string>
    <string name="string_btn_apply_to_join">Apply to join</string>
    <string name="string_txt_no_introduction">No introduction</string>
    <string name="string_txt_strong_point">Strong point</string>
    <string name="string_btn_agree">Agree</string>
    <string name="string_txt_user_id">User ID</string>
    <string name="string_btn_edit">Edit</string>
    <string name="string_btn_exit">Exit</string>
    <string name="string_btn_save">Save</string>
    <string name="string_txt_edit_mode">EDIT MODE</string>
    <string name="string_txt_node_detail">Node detail</string>
    <string name="string_tab_massage_new_message">New message</string>
    <string name="string_tab_massage_project_invite">New projects</string>
    <string name="string_btn_refuse">Refuse</string>
    <string name="string_tab_cardcase_saved_card">Saved card</string>
    <string name="string_tab_cardcase_push_card">New card</string>
    <string name="string_txt_create_project">Create project</string>

=======
>>>>>>> 2b65d275b8abc085741fbf892a09bc5366e41c3d
</resources>