<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <TextView
                android:id="@+id/txtThisProjectName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/string_txt_project_name"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtProjectAbstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/string_txt_project_abstract"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/editProjectName" />

            <TextView
                android:id="@+id/txtProjectTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_txt_project_time"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/btnAddMember" />

            <TextView
                android:id="@+id/txtDash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="-"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintBottom_toBottomOf="@+id/btnSetStartDate"
                app:layout_constraintEnd_toStartOf="@+id/btnSetDeadline"
                app:layout_constraintStart_toEndOf="@+id/btnSetStartDate"
                app:layout_constraintTop_toTopOf="@+id/btnSetStartDate" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/btnAddMember"
                android:layout_width="90dp"
                android:layout_height="101dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_outline_add_box_24"
                app:civ_border_color="#ffffff"
                app:civ_border_width="4dp"
                app:civ_shadow="true"

                app:civ_shadow_color="@color/x_recycler_color_text_gray"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectMember" />

            <TextView
                android:id="@+id/txtProjectLeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/string_txt_project_leader"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/editProjectAbstract" />

            <TextView
                android:id="@+id/txtProjectMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_txt_project_members"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/btnAddLeader" />

            <EditText
                android:id="@+id/editProjectName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:background="@drawable/custom_edit_text_background"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/txtThisProjectName" />

            <EditText
                android:id="@+id/editProjectAbstract"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/custom_edit_text_background"
                android:ems="10"
                android:inputType="textMultiLine"
                android:padding="6dp"
                android:textSize="@dimen/rc_label_size_1"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectAbstract" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/rc_screen_margin_horizontal" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <Button
                android:id="@+id/btnCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="6dp"
                android:text="@string/string_btn_create"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/btnSetStartDate" />

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/btnAddLeader"
                android:layout_width="90dp"
                android:layout_height="101dp"
                android:layout_gravity="center_horizontal"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_outline_add_box_24"
                app:civ_border_color="#ffffff"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_color="@color/x_recycler_color_text_gray"

                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectLeader" />

            <Button
                android:id="@+id/btnSetStartDate"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawableTint="@color/white"
                android:text="@string/string_txt_btn_set_start_date"
                app:layout_constraintStart_toStartOf="@+id/guideline17"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectTime" />

            <Button
                android:id="@+id/btnSetDeadline"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="6dp"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawableTint="@color/white"
                android:text="@string/string_txt_btn_set_end_date"
                app:layout_constraintEnd_toStartOf="@+id/guideline16"
                app:layout_constraintTop_toBottomOf="@+id/txtProjectTime" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>