<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.projectlite2.android.LoginViewModel" />

        <variable
            name="model"
            type="LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/string_checkbox_rememberPwd"
        tools:context=".LoginPwdFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="text"
            android:maxLength="100"
            android:paddingHorizontal="@dimen/rc_padding_2"
            android:text="@={model.phoneNumber}"
            android:textSize="@dimen/rc_button_text_size_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.381"
            tools:text="@tools:sample/us_phones" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_txt_phone"
            android:textSize="@dimen/rc_label_size_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtPhone"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/txtPhone" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/rc_padding_2"
            android:text="@={model.password}"
            android:textSize="@dimen/rc_button_text_size_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_txt_pwd"
            android:textSize="@dimen/rc_label_size_1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/txtPassword" />


<!--        <github.ishaan.buttonprogressbar.ButtonProgressBar-->
<!--            android:id="@+id/btnLogin"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="@dimen/rc_login_button_height"-->
<!--            android:onClick="@{()->model.Login()}"-->
<!--            android:paddingTop="8dp"-->
<!--            android:paddingBottom="8dp"-->
<!--            android:text="@string/string_btn_login"-->
<!--            android:textSize="@dimen/rc_button_text_size_1"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@+id/guideline7"-->
<!--            app:layout_constraintHorizontal_bias="0.0"-->
<!--            app:layout_constraintStart_toStartOf="@+id/guideline6"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:layout_constraintVertical_bias="0.7"-->
<!--            app:textColor="@android:color/white"-->
<!--            app:type="indeterminate" />-->


        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="@dimen/rc_login_button_height"
            android:onClick="@{()->model.Login()}"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/string_btn_login"
            android:textSize="@dimen/rc_button_text_size_1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            />

        <TextView
            android:id="@+id/linkSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_link_signup"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.956" />

        <TextView
            android:id="@+id/linkSMSLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_link_smslogin"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.911" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imgProfilePicture"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/string_image_descrip_profile_picture"
            app:civ_border_color="@color/white"
            app:civ_border_width="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toStartOf="@+id/guideline7"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline6"
            app:layout_constraintTop_toTopOf="@+id/guideline8"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_account_circle_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.33" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.54" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.59" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/rc_margin_1"
            android:background="?android:attr/listDivider"
            android:paddingHorizontal="@dimen/rc_padding_1"
            app:layout_constraintBottom_toBottomOf="@+id/txtPhone"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/txtPhone" />

        <View
            android:id="@+id/divider2"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="@dimen/rc_margin_1"
            android:background="?android:attr/listDivider"
            android:paddingHorizontal="@dimen/rc_padding_1"
            app:layout_constraintBottom_toBottomOf="@+id/txtPassword"
            app:layout_constraintStart_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/txtPassword" />

        <CheckBox
            android:id="@+id/chkRememberPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:text="@string/string_checkbox_rememberPwd"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

        <TextView
            android:id="@+id/linkForgetpwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_link_forgetPwd"
            app:layout_constraintBottom_toTopOf="@+id/guideline12"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>