<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="18dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="18dp"
    android:layout_marginBottom="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/rc_card_corner_radius"
    app:cardElevation="@dimen/rc_card_elevation"
    app:cardMaxElevation="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="88dp">

        <ProgressBar
            android:id="@+id/progressProject"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="376dp"
            android:layout_height="13dp"
            android:progress="50"
            android:progressDrawable="@drawable/custom_progressbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/txtSettingItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="@dimen/rc_card_item_project_main_text"
            app:layout_constraintBottom_toTopOf="@+id/progressProject"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="交互设计专题(I)" />

        <ImageButton
            android:id="@+id/btnProjectTree"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/string_descrip_btn_project_tree"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@+id/progressProject"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_alt_route_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.84" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <TextView
            android:id="@+id/txtLeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/string_txt_isLeader"
            app:layout_constraintBottom_toBottomOf="@+id/txtSettingItemName"
            app:layout_constraintStart_toEndOf="@+id/txtSettingItemName"
            app:layout_constraintTop_toTopOf="@+id/txtSettingItemName"
            tools:text="(负责人)" />

        <ImageView
            android:id="@+id/dotMsgCount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/string_descrip_dot_msg_count"
            app:layout_constraintBottom_toBottomOf="@+id/txtLeader"
            app:layout_constraintEnd_toStartOf="@+id/guideline10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/txtLeader"
            app:srcCompat="@drawable/ic_baseline_error_24" />

        <View
            android:id="@+id/divider3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="#000000"
            app:layout_constraintBottom_toBottomOf="@+id/btnProjectTree"
            app:layout_constraintEnd_toStartOf="@+id/btnProjectTree"
            app:layout_constraintTop_toTopOf="@+id/btnProjectTree" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
